--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,96 +2,53 @@
   
   <div class="row" style="margin-bottom: 10px;">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-      <ul class="nav nav-pills">
+      <ul class="nav nav-tabs">
         <li class="active"><a href="#dashboard" data-toggle="tab">Dashboard</a></li>
         <li><a href="#amountOwed" data-toggle="tab">Breakdowns</a></li>
         <li><a href="#profile" data-toggle="tab">My Profile</a></li>
       </ul>
     </div>
   </div>
+  <script type="text/javascript">$(function () { setTimeout(function () { $('[href="#profile"]').click(); }, 0); });</script>
 
   <div class="tab-content">
-    <div class="tab-pane active row" id="dashboard">
+    <div class="tab-pane row" id="dashboard">
       <div class="col-lg-3 col-xs-6">
-        <!-- small box -->
         <div class="small-box bg-aqua">
           <div class="inner">
-            <h3>
-              <%= @dashboard[:total_debt].to_i %>
-            </h3>
-            <p>
-              Total Debt
-            </p>
+            <h3><%= @dashboard[:total_debt].to_i %></h3>
+            <p>Total Debt</p>
           </div>
-          <!-- <div class="icon">
-            <i class="ion ion-bag"></i>
-          </div> -->
-          <a href="#" class="small-box-footer">
-          More info <i class="fa fa-arrow-circle-right"></i>
-          </a>
+          <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
         </div>
       </div>
-      <!-- ./col -->
       <div class="col-lg-3 col-xs-6">
-        <!-- small box -->
         <div class="small-box bg-green">
           <div class="inner">
-            <h3>
-              <%= @dashboard[:total_paid] %>
-            </h3>
-            <p>
-              Total Paid
-            </p>
+            <h3><%= @dashboard[:total_paid] %></h3>
+            <p>Total Paid</p>
           </div>
-          <!-- <div class="icon">
-            <i class="ion ion-stats-bars"></i>
-          </div> -->
-          <a href="#" class="small-box-footer">
-          More info <i class="fa fa-arrow-circle-right"></i>
-          </a>
+          <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
         </div>
       </div>
-      <!-- ./col -->
       <div class="col-lg-3 col-xs-6">
-        <!-- small box -->
         <div class="small-box bg-yellow">
           <div class="inner">
-            <h3>
-              <%= @dashboard[:total_amount] %>
-            </h3>
-            <p>
-              Total Bills
-            </p>
+            <h3><%= @dashboard[:total_amount] %></h3>
+            <p>Total Bills</p>
           </div>
-          <!-- <div class="icon">
-            <i class="ion ion-person-add"></i>
-          </div> -->
-          <a href="#" class="small-box-footer">
-          More info <i class="fa fa-arrow-circle-right"></i>
-          </a>
+          <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
         </div>
       </div>
-      <!-- ./col -->
       <div class="col-lg-3 col-xs-6">
-        <!-- small box -->
         <div class="small-box bg-red">
           <div class="inner">
-            <h3>
-              <%= @dashboard[:participations].length %>
-            </h3>
-            <p>
-              Total Activities
-            </p>
+            <h3><%= @dashboard[:participations].length %></h3>
+            <p>Total Activities</p>
           </div>
-          <!-- <div class="icon">
-            <i class="ion ion-pie-graph"></i>
-          </div> -->
-          <a href="#" class="small-box-footer">
-          More info <i class="fa fa-arrow-circle-right"></i>
-          </a>
+          <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
         </div>
       </div>
-      <!-- ./col -->
     </div>
 
     <div class="tab-pane" id="amountOwed">
@@ -106,18 +63,10 @@
     </div>
   <% end %>
 
-  <div class="tab-pane row" id="profile">
-    <aside class="span4">
-      <section>
-        <h1>
-          <%= gravatar_for @user %>
-          <%= @user.name %>
-        </h1>
-      </section>
-    </aside>
+  <div class="tab-pane" id="profile">
 
+    <%= render partial: '/users/partials/user_profile', locals: { user: @user } %>
     
-
     <% if @user.id == current_user.id %>
       <%= link_to "Activities", user_activities_url(current_user), class: "btn btn-primary" %>
       <%= link_to "Friends", friends_user_url(current_user), class: "btn btn-primary" %>
@@ -126,4 +75,4 @@
   </div>
 </div>
 
-<script type="text/javascript">var dashboard = <%= raw @dashboard.to_json %>;</script>
+<% dump_to_js @dashboard, 'dashboard' %>
