Facebook users, resque for friends

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,7 @@
  * require AdminLTE
  *= require chosen
  *= require sb-admin
+ *= require social-buttons
  *= require bootstrap-switch
  *= require datepicker3
  *= require morris
