--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -31,6 +31,7 @@
           <div class="form-group">
             <div class="col-lg-10 col-lg-offset-2">
               <button type="submit" class="btn btn-primary">Login</button>
+              <a href="/auth/facebook/" class="btn btn-facebook"><i class="fa fa-facebook"></i> | Login with Facebook</a>
             </div>
           </div>
           
