--- a/app/views/users/partials/_user_profile.html.erb
+++ b/app/views/users/partials/_user_profile.html.erb
@@ -4,7 +4,7 @@
 
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
     <h1>
-      <%= gravatar_for user_profile %>
+      <%= profile_picture_for user_profile %>
       <span id="lblName"><%= user_profile.name %></span>
     </h1>
   </div>
