--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -56,6 +56,7 @@
           <div class="form-group">
             <div class="col-lg-10 col-lg-offset-2">
               <button type="submit" class="btn btn-primary">Create Account!</button>
+              <button class="btn btn-facebook"><i class="fa fa-facebook"></i> | Connect with Facebook</button>
             </div>
           </div>
           
