--- a/app/views/users/partials/_friend_as_block.html.erb
+++ b/app/views/users/partials/_friend_as_block.html.erb
@@ -1,6 +1,6 @@
 <a href="<%= user_url friend %>" class="friend-block-container">
   <div class="friend-preview pull-left">
-    <%= gravatar_for friend %>
+    <%= profile_picture_for friend %>
   </div>
   <h4 class="friend-block-friend-name"><%= friend[:name] %></h4>
   <h5 class="friend-block-friend-email"><%= friend[:email] %></h5>
