--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,10 @@
 <head>
   <title>Splity</title>
   <%= stylesheet_link_tag    "application", media: "all" %>
+  
+  <%= javascript_include_tag "http://maps.googleapis.com/maps/api/js?libraries=places&sensor=true" %>
   <%= javascript_include_tag "application" %>
+
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
   
   <meta name="viewport" content="width=device-width, initial-scale=1">
