--- a/app/views/layouts/partials/_navbar.html.erb
+++ b/app/views/layouts/partials/_navbar.html.erb
@@ -30,7 +30,7 @@
         </li>
       </ul>
       <form class="navbar-form navbar-left">
-        <input type="text" class="form-control col-lg-8" placeholder="Search">
+        <input type="text" class="form-control col-lg-8 typeahead" placeholder="Search" id="txtMainSearch">
       </form>
       <ul class="nav navbar-nav navbar-right">
         <% if !signed_in? %>
