--- a/app/views/users/partials/_user_profile.html.erb
+++ b/app/views/users/partials/_user_profile.html.erb
@@ -17,12 +17,11 @@
       <td><%= user_profile.get_field(field, (params[:id].blank? || params[:id] == current_user.id)) %></td>
     </tr>
     <% end %>
+    <tr>
+      <th>Member since</th>
+      <td><%= user_profile.member_since %></td>
+    </tr>
     </table>
-  </div>
-
-  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-    <h3>Member since</h3>
-    <%= user_profile.member_since %>
   </div>
 
 </div>
