--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -5,7 +5,7 @@
   <% @activities.map {|x| ActivityPresenter.new(x)}.each do |activity_presenter| %>
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
     <%= link_to user_activity_url current_user, activity_presenter.id do %>
-        <%= raw "#{activity_presenter.event} at #{activity_presenter.location} with #{activity_presenter.users_except current_user} on #{activity_presenter.date} for a total of #{activity_presenter.formatted_total_amount}" %>
+        <%= raw "#{activity_presenter.event} at #{activity_presenter.location} with #{activity_presenter.users_except(current_user).pluck(:name).to_sentence} on #{activity_presenter.date} for a total of #{activity_presenter.formatted_total_amount}" %>
     <% end %>
   </div>
   <% end %>
@@ -14,4 +14,8 @@
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
     <a href="<%= new_user_activity_path %>" class="btn btn-primary">New Activity</a>
   </div>
+</div>
+
+<div class="row">
+  <%= render partial: "/activities/partials/activities_timeline", locals: { activities: @activities } %>
 </div>
