--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <%= stylesheet_link_tag    "application", media: "all" %>
   
   <script type="text/javascript">
-    var params = <%= { controller: params[:controller], action: params[:action] }.to_json.html_safe %>
+    var params = <%= { controller: params[:controller], action: params[:action] }.merge!(params).to_json.html_safe %>
     var current_user = <%= signed_in? ? { id: current_user.id }.to_json.html_safe : {}.to_json %>
   </script>
 
