--- a/app/views/layouts/partials/_navbar.html.erb
+++ b/app/views/layouts/partials/_navbar.html.erb
@@ -44,7 +44,7 @@
             </li>
             <li><a href="<%= friends_user_url(current_user) %>">My Friends</a>
             </li>
-            <li><a href="<%= destroy_user_url(current_user) %>"><span class="text-danger">Delete Account</span></a>
+            <!-- <li><a href="<%= destroy_user_url(current_user) %>"><span class="text-danger">Delete Account</span></a> -->
             </li>
             <li class="divider"></li>
             <li><a href="<%= logout_path %>">Logout</a>
