--- a/app/views/users/partials/_dashboard.html.erb
+++ b/app/views/users/partials/_dashboard.html.erb
@@ -3,6 +3,7 @@
     <ul class="nav nav-tabs">
       <li class="active"><a href="#dashboard" data-toggle="tab">Dashboard</a></li>
       <li><a href="#amountOwed" data-toggle="tab">Graphs and shit</a></li>
+      <li><a href="#tabProfile" data-toggle="tab">My Profile</a></li>
     </ul>
   </div>
 </div>
@@ -22,9 +23,15 @@
       <div class="col-lg-6" style="height: 250px" id="divAmountDue"></div>
       <div class="col-lg-6" style="height: 250px" id="divAmountOwed"></div>
     </div>
-
     <div class="row">
       <div class="col-lg-6" style="height: 250px;" id="divProportionalAmountPaid"></div>
     </div>
   </div>
+
+  <div class="tab-pane" id="tabProfile">
+    <div class="row" id="profile">
+      <%= render partial: '/users/partials/user_profile', locals: { user: @user } %>
+    </div>
+  </div>
+
 </div>
