--- a/app/views/users/partials/_profile_summary_block.html.erb
+++ b/app/views/users/partials/_profile_summary_block.html.erb
@@ -25,7 +25,7 @@
 <div class="row" style="margin-top: 20px">
   <div class="col-xs-12">
     <div class="list-group">
-      <a href="<%= user_activities_url user %>" class="list-group-item"><span class="badge"><%= user.activities.count %></span>Activities</a>
+      <a href="<%= homepage_url %>" class="list-group-item"><span class="badge"><%= user.activities.count %></span>Activities</a>
       <a href="<%= friends_user_url user %>" class="list-group-item"><span class="badge"><%= user.friends.count %></span>Friends</a>
     </div>
   </div>
