--- a/app/views/layouts/single_page.html.erb
+++ b/app/views/layouts/single_page.html.erb
@@ -15,5 +15,6 @@
     <%= render partial: '/layouts/partials/navbar' %>
     <%= render partial: "/layouts/partials/container" %>
     <%= dump_page_specific_javascripts.html_safe %>
+    <modals><%= render partial: "/partials/modal" %></modals>
   </body>
 </html>
