--- a/app/views/users/partials/_user_activity_feed.html.erb
+++ b/app/views/users/partials/_user_activity_feed.html.erb
@@ -25,7 +25,7 @@
       <div class="col-xs-12">
         <b><%= pluralize activity.users.count - 1, "other friend" %></b><br/>
         <% for user in activity.users_except current_user do %>
-          <a href="javascript:void(0)" class="popover-person" data-id="<%= user.id %>">
+          <a href="javascript:void(0)" class="popover-person user-tooltip" data-id="<%= user.id %>">
             <img src="<%= profile_picture_url_for user, 32 %>" class="img-circle" width="32" height="32" title="<%= user.name %>" alt="<%= user.name %>">
           </a>
         <% end %>
@@ -36,6 +36,39 @@
 </div>
 
 <% request_javascript_module "activity_feed" %>
+
+<% request_javascript_module "angular_feed" %>
+
+
+<!-- <div class="feed-container" ng-app="splity" ng-controller="feedsController">
+
+  <div href="javascript:void(0)" class="activity activity-collapsed" ng-repeat="activity in feed.activities">
+    <div class="row contracted-content">
+      <div class="col-xs-9">
+        {{ activity.event }} @ {{ activity.location }}
+      </div>
+      <div class="pull-right" style="margin-right: 10px;">
+        {{ activity.date }}
+      </div>
+    </div>
+    <div class="row expanded-content">
+      <div class="col-xs-12">
+        <h4 class="pull-left">{{ activity.event }}</h4>
+        <span class="pull-right">
+          <i class="glyphicon glyphicon-time"></i> <a href="javascript:void(0)" class="popover-date" data-date="{{ activity.date }}">{{ activity.date }}</a>
+        </span>
+      </div>
+      <div class="col-xs-12">
+        <h5><i class="glyphicon glyphicon-map-marker"></i> {{ activity.location }}</h5>
+        <b>Total Amount Spent: {{ activity.amount }}</b><br/>
+      </div>
+      <div class="col-xs-12">
+        <b></b><br/>
+
+      </div>
+    </div>
+  </div>
+</div> -->
 
 <style type="text/css">
   .activity.activity-collapsed:hover {
