--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,6 +54,6 @@
   </div>
   <% end %>
   <% end %> -->
-  <%= dump_page_specific_javascripts.html_safe %>
+  <%= render partial: "layouts/partials/footer/common_footer" %>
 </body>
 </html>
