--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
 
   <%= render partial: '/layouts/partials/navbar' %>
 
-  <div class="container">
+  <div class="container" ng-app="splity">
   
     <%= render partial: "/layouts/partials/common_page_header" %>
     
@@ -36,6 +36,7 @@
 
     <%# Page Content %>
     <%= yield %>
+    <div ng-view></div>
 
   </div>
 
