--- a/app/views/users/partials/_user_activity_feed.html.erb
+++ b/app/views/users/partials/_user_activity_feed.html.erb
@@ -37,7 +37,7 @@
 
 <% request_javascript_module "activity_feed" %>
 
-<% request_javascript_module "angular_feed" %>
+<%# request_javascript_module "angular_feed" %>
 
 
 <!-- <div class="feed-container" ng-app="splity" ng-controller="feedsController">
