--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     var current_user = <%= signed_in? ? { id: current_user.id }.to_json.html_safe : {}.to_json %>
   </script>
 
-  <%= javascript_include_tag "http://maps.googleapis.com/maps/api/js?libraries=places&sensor=true" %>
+  <%#= javascript_include_tag "http://maps.googleapis.com/maps/api/js?libraries=places&sensor=true" %>
   <%= javascript_include_tag "application" %>
 
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
@@ -36,7 +36,7 @@
 
     <%# Page Content %>
     <%= yield %>
-    <div ng-view></div>
+    <!-- <div ng-view></div> -->
 
   </div>
 
@@ -56,5 +56,6 @@
   <% end %>
   <% end %> -->
   <%= render partial: "layouts/partials/footer/common_footer" %>
+
 </body>
 </html>
