--- a/app/views/users/friends.html.erb
+++ b/app/views/users/friends.html.erb
@@ -5,20 +5,28 @@
       <div class="row">
         <div class="pull-left col-lg-3"><h4>All Your Friends</h4></div>
          <div class="pull-right col-lg-4">
-           <form method="POST" action="">
+           <!-- <form method="POST" action="">
               <div class="input-group input-group-m">
                 <span class="input-group-addon">@</span>
                 <input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
-                <input type="email" id="email" class="form-control" name="friend[email]" value="" placeholder="add friend via email" autofocus required autocomplete>
+                <input type="email" id="email" class="form-control" name="friend[email]" value="" placeholder="add friend via email" autofocus required autocomplete="off">
                   <span class="input-group-btn">
                     <input class="btn btn-default" id="btnSearch" type="submit" value="Add" style="display: none">
                   </span>
               </div>
-            </form>
+            </form> -->
+           <div class="input-group input-group-m">
+             <span class="input-group-addon">@</span>
+             <input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
+             <input type="email" class="form-control" name="friend[email]" id="txtAddFriend" value="" placeholder="add friend via email" autofocus required autocomplete="off">
+               <span class="input-group-btn">
+                 <button class="btn btn-primary" id="btnSearch">Add</button>
+               </span>
+           </div>
          </div>
       </div>
       </div>
-      <div class="panel-body">
+      <div class="panel-body" id="friendsContainer">
 
         <% @friends.each do |friend| %>
           <div class="col-md-4">
@@ -40,3 +48,20 @@
     </div>
   </div>
 </div>
+
+
+<script type="text/x-template" id="tmplFriendBlock">
+  {{#friends}}
+  <div class="col-md-4">
+    <a href="{{profile_url}}" class="friend-block-container">
+      <div class="friend-preview pull-left">
+        <img src="{{profilePictureUrl}}">
+      </div>
+      <h4 class="friend-block-friend-name">{{firstname}} {{lastname}}</h4>
+      <h5 class="friend-block-friend-email">{{email}}</h5>
+      <span class="glyphicon glyphicon-remove friend-block-remove-friend" title="Remove Friend"></span>
+      <div style="clear: both"></div>
+    </a>
+  </div>
+  {{/friends}}
+</script>
